2011-04-25  Ojan Vafai  <ojan@chromium.org>

        Reviewed by James Robinson.

        fix OwnPtr strict error in FrameView.cpp
        https://bugs.webkit.org/show_bug.cgi?id=59402

        * page/FrameView.cpp:
        (WebCore::FrameView::FrameView):
        (WebCore::FrameView::addWidgetToUpdate):

2011-04-25  Adam Klein  <adamk@chromium.org>

        Unreviewed, rolling out r84844.
        http://trac.webkit.org/changeset/84844
        https://bugs.webkit.org/show_bug.cgi?id=59395

        Checked in too much.

        * rendering/style/SVGRenderStyleDefs.cpp:
        (WebCore::StyleShadowSVGData::StyleShadowSVGData):
        * svg/SVGDocumentExtensions.cpp:
        (WebCore::SVGDocumentExtensions::removePendingResource):
        * svg/SVGSVGElement.cpp:
        (WebCore::SVGSVGElement::SVGSVGElement):
        * svg/SVGStyledTransformableElement.cpp:
        (WebCore::SVGStyledTransformableElement::supplementalTransform):
        * svg/SVGTextElement.cpp:
        (WebCore::SVGTextElement::supplementalTransform):
        * svg/graphics/SVGImage.cpp:
        (WebCore::SVGImage::dataChanged):

2011-04-25  Adrienne Walker  <enne@google.com>

        Reviewed by David Levin.

        Make ActiveDOMCallback play nice with OwnPtr strict mode
        https://bugs.webkit.org/show_bug.cgi?id=59398

        * bindings/generic/ActiveDOMCallback.cpp:
        (WebCore::ActiveDOMCallback::ActiveDOMCallback):

2011-04-25  Adam Klein  <adamk@chromium.org>

        Reviewed by James Robinson.

        Fix OwnPtr strict errors in some SVG classes.
        https://bugs.webkit.org/show_bug.cgi?id=59395

        * rendering/style/SVGRenderStyleDefs.cpp:
        (WebCore::StyleShadowSVGData::StyleShadowSVGData):
        * svg/SVGSVGElement.cpp:
        (WebCore::SVGSVGElement::SVGSVGElement):
        * svg/SVGStyledTransformableElement.cpp:
        (WebCore::SVGStyledTransformableElement::supplementalTransform):
        * svg/SVGTextElement.cpp: